tests/snapshots/dbc-cantools/choices.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
bit_timing: []
value_tables:
  - name: Bar
    descriptions:
      - id: 6
        description: reserved
      - id: 5
        description: reserved
      - id: 4
        description: unused 2
      - id: 3
        description: unused
      - id: 2
        description: unused
      - id: 1
        description: "#%=*ä'"
      - id: 0
        description: With space
      - id: -5
        description: A negative value
messages:
  - id:
      Standard: 0
    name: Foo
    size: 8
    transmitter: ~
    signals:
      - name: Foo
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Int: -128
        max:
          Uint: 127
        unit: ""
attribute_definitions:
  - Plain:
      - BusType
      - String
attribute_defaults:
  - name: BusType
    value:
      String: ""
value_descriptions:
  - Signal:
      message_id:
        Standard: 0
      name: Foo
      value_descriptions:
        - id: 6
          description: reserved
        - id: 5
          description: reserved
        - id: 4
          description: unused 2
        - id: 3
          description: unused
        - id: 2
          description: unused
        - id: 1
          description: "#%=*ä'"
        - id: 0
          description: With space
        - id: -5
          description: A negative value
