tests/snapshots/dbc-cantools/choices_issue_with_name.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
value_tables:
  - name: CmdResp
    descriptions:
      - id: 1
        description: SignalWithChoices_CmdRespOK
      - id: 0
        description: SignalWithChoices_CmdRespErr
messages:
  - id:
      Extended: 589824
    name: TestMessage
    size: 1
    transmitter: ~
    signals:
      - name: SignalWithChoices
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
attribute_definitions:
  - Plain:
      - BusType
      - String
attribute_defaults:
  - name: BusType
    value:
      String: CAN
value_descriptions:
  - Signal:
      message_id:
        Extended: 589824
      name: SignalWithChoices
      value_descriptions:
        - id: 1
          description: SignalWithChoices_CmdRespOK
        - id: 0
          description: SignalWithChoices_CmdRespErr
