tests/snapshots/dbc-cantools/comments_hex_and_motorola_converted_from_sym.snap
---
source: tests/snapshots.rs
---
version: "6.0"
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Standard: 1568
    name: Msg1
    size: 2
    transmitter: Peripherals
    signals:
      - name: sig22
        multiplexer_indicator:
          MultiplexedSignal: 2
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1
        unit: ""
      - name: sig12
        multiplexer_indicator:
          MultiplexedSignal: 1
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 1
        unit: ""
      - name: sig1
        multiplexer_indicator: Multiplexor
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 1365
    name: Msg2
    size: 8
    transmitter: ECU
    signals:
      - name: Test7
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Test6
        multiplexer_indicator: Plain
        start_bit: 55
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Test5
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Test4
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Test3
        multiplexer_indicator: Plain
        start_bit: 31
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Test2
        multiplexer_indicator: Plain
        start_bit: 23
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Test1
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Test0
        multiplexer_indicator: Plain
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
message_transmitters:
  - message_id:
      Standard: 1365
    transmitter:
      - ECU
      - Peripherals
comments:
  - Signal:
      message_id:
        Standard: 1568
      name: sig22
      comment: another comment for sig1=2
  - Signal:
      message_id:
        Standard: 1568
      name: sig12
      comment: another comment for sig1=1
  - Signal:
      message_id:
        Standard: 1568
      name: sig1
      comment: a comment
  - Message:
      id:
        Standard: 1365
      comment: test
value_descriptions:
  - Signal:
      message_id:
        Standard: 1365
      name: Test7
      value_descriptions:
        - id: 1
          description: A
        - id: 2
          description: B
        - id: 3
          description: C
        - id: 4
          description: D
