tests/snapshots/dbc-cantools/dump_signal_choices.snap
---
source: tests/snapshots.rs
---
version: "HIPBNYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY/4/%%%/4/'%**4YYY///"
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
bit_timing: []
nodes:
  - Node0
messages:
  - id:
      Standard: 1024
    name: Message0
    size: 8
    transmitter: Node0
    signals:
      - name: FooSignal
        multiplexer_indicator: Plain
        start_bit: 0
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BarSignal
        multiplexer_indicator: Plain
        start_bit: 2
        size: 3
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
value_descriptions:
  - Signal:
      message_id:
        Standard: 1024
      name: FooSignal
      value_descriptions:
        - id: 0
          description: FOO_A
        - id: 1
          description: FOO_B
        - id: 2
          description: FOO_C
        - id: 3
          description: FOO_D
  - Signal:
      message_id:
        Standard: 1024
      name: BarSignal
      value_descriptions:
        - id: 0
          description: BAR_A
        - id: 1
          description: BAR_B
        - id: 2
          description: BAR_C
        - id: 3
          description: BAR_D
        - id: 4
          description: BAR_E
        - id: 5
          description: BAR_F
        - id: 6
          description: BAR_G
        - id: 7
          description: BAR_H
