tests/snapshots/dbc-cantools/fd_test.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Extended: 3
    name: TestMsg_Ex
    size: 8
    transmitter: ~
    signals:
      - name: TestSig_Copy_1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 2
    name: TestMsg_Std
    size: 8
    transmitter: ~
    signals:
      - name: TestSig_Copy_3
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 1
    name: TestMsg_FDStd
    size: 8
    transmitter: ~
    signals:
      - name: TestSig_Copy_2
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Extended: 0
    name: TestMsg_FDEx
    size: 8
    transmitter: ~
    signals:
      - name: TestSig
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
attribute_definitions:
  - Message:
      - CANFD_BRS
      - Enum:
          - "0"
          - "1"
  - Plain:
      - DBName
      - String
  - Plain:
      - BusType
      - String
  - Node:
      - NodeLayerModules
      - String
  - Node:
      - ECU
      - String
  - Node:
      - CANoeJitterMax
      - Int:
          - Uint: 0
          - Uint: 0
  - Node:
      - CANoeJitterMin
      - Int:
          - Uint: 0
          - Uint: 0
  - Node:
      - CANoeDrift
      - Int:
          - Uint: 0
          - Uint: 0
  - Node:
      - CANoeStartDelay
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - VFrameFormat
      - Enum:
          - StandardCAN
          - ExtendedCAN
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - reserved
          - StandardCAN_FD
          - ExtendedCAN_FD
attribute_defaults:
  - name: CANFD_BRS
    value:
      String: "1"
  - name: DBName
    value:
      String: ""
  - name: BusType
    value:
      String: ""
  - name: NodeLayerModules
    value:
      String: ""
  - name: ECU
    value:
      String: ""
  - name: CANoeJitterMax
    value:
      Uint: 0
  - name: CANoeJitterMin
    value:
      Uint: 0
  - name: CANoeDrift
    value:
      Uint: 0
  - name: CANoeStartDelay
    value:
      Uint: 0
  - name: VFrameFormat
    value:
      String: StandardCAN
attribute_values_database:
  - name: BusType
    value:
      String: CAN FD
  - name: DBName
    value:
      String: fd_test
attribute_values_message:
  - name: VFrameFormat
    message_id:
      Extended: 3
    value:
      Uint: 1
  - name: VFrameFormat
    message_id:
      Standard: 1
    value:
      Uint: 14
  - name: VFrameFormat
    message_id:
      Extended: 0
    value:
      Uint: 15
