tests/snapshots/dbc-cantools/floating_point.snap
---
source: tests/snapshots.rs
---
version: "HIPBNYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY/4/%%%/4/'%**4YYY///"
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - TestNode
messages:
  - id:
      Standard: 1024
    name: Message1
    size: 8
    transmitter: TestNode
    signals:
      - name: Signal1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 64
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 1025
    name: Message2
    size: 8
    transmitter: TestNode
    signals:
      - name: Signal2
        multiplexer_indicator: Plain
        start_bit: 32
        size: 32
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Signal1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 32
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
comments:
  - Node:
      name: TestNode
      comment: ""
attribute_definitions:
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 65535
attribute_defaults:
  - name: GenMsgCycleTime
    value:
      Uint: 0
signal_extended_value_type_list:
  - message_id:
      Standard: 1024
    signal_name: Signal1
    signal_extended_value_type: IEEEdouble64bit
  - message_id:
      Standard: 1025
    signal_name: Signal1
    signal_extended_value_type: IEEEfloat32Bit
  - message_id:
      Standard: 1025
    signal_name: Signal2
    signal_extended_value_type: IEEEfloat32Bit
